# mx25r-rs

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml
examples/: asynchronous.rs  blocking.rs
examples/nrf52840-dk/: Cargo.toml  README.md
examples/nrf52840-dk/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa
examples/nrf52840-dk/tests/: integration.rs
nrf52840/: Cargo.toml
nrf52840/.cargo/: config.toml
nrf52840/src/: main.rs
nrf52840/tests/: asynchronous.rs  blocking.rs
src/: address.rs  asynchronous.rs  blocking.rs  command.rs  error.rs  lib.rs  mx25r.rs  register.rs
tests/: examples.rs
