[package]
name = "mx25r"
version = "1.0.0"
edition = "2021"
authors = ["xgroleau <xavgroleau@gmail.com>"]
repository = "https://github.com/xgroleau/mx25r-rs"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/xgroleau/mx25r-rs"
description = "Platform-agnostic Rust driver for the macronix MX25R NOR flash."
documentation = "https://docs.rs/mx25r"
readme = "README.md"
keywords = ["nor-flash", "spi", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]

exclude = [
    "flake.nix",
    "flake.lock",
    ".envrc",
    "nrf52840",
]


[dependencies]
embedded-hal = "1"
embedded-hal-async = "1.0"
bit = "0.1.1"
defmt = { version = "1", optional = true }
embedded-storage-async = "0.4"
embedded-storage = "0.3"
embassy-futures = "0.1"

[package.metadata.docs.rs]
all-features = true
